force-app/main/default/objects/File_Sharing__c/File_Sharing__c.object-meta.xml
<CustomObject>
    <label>File Sharing</label>
    <nameField>
        <displayFormat>FS-{0000000}</displayFormat>
        <label>ContentVersion Sharing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Sharing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>