force-app/main/default/objects/File_Sharing__c/fields/Account_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Account_Specialization__c</fullName>
    <label>Account Specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RPSP</fullName>
            </value>
            <value>
                <fullName>RASP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>