force-app/main/default/objects/File_Sharing__c/fields/AccountIds__c.field-meta.xml
<CustomField>
    <fullName>AccountIds__c</fullName>
    <label>AccountIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>