force-app/main/default/objects/File_Sharing__c/fields/ChannelProgramIds__c.field-meta.xml
<CustomField>
    <fullName>ChannelProgramIds__c</fullName>
    <label>ChannelProgramIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>