force-app/main/default/objects/File_Sharing__c/fields/ChannelProgramLevelIds__c.field-meta.xml
<CustomField>
    <fullName>ChannelProgramLevelIds__c</fullName>
    <label>ChannelProgramLevelIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>