force-app/main/default/objects/File_Sharing__c/fields/Exclude_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Account_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Account Name</label>
    <type>Checkbox</type>
</CustomField>