force-app/main/default/objects/File_Sharing__c/fields/Exclude_Channel_Program__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Channel_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Channel Program</label>
    <type>Checkbox</type>
</CustomField>