force-app/main/default/objects/File_Sharing__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>MSP-Reseller</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>MSP Customer</fullName>
            </value>
            <value>
                <fullName>Alliance Partner</fullName>
            </value>
            <value>
                <fullName>FSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>