force-app/main/default/objects/File_Sharing__c/fields/Selected_Account_Names__c.field-meta.xml
<CustomField>
    <fullName>Selected_Account_Names__c</fullName>
    <label>Selected Account Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>