force-app/main/default/objects/File_Sharing__c/fields/Selected_Channel_Program_Level_Names__c.field-meta.xml
<CustomField>
    <fullName>Selected_Channel_Program_Level_Names__c</fullName>
    <label>Selected Channel Program Level Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>