force-app/main/default/objects/File_Sharing__c/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <label>Theatre</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>AMER-PS</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>CDM-APAC</fullName>
            </value>
            <value>
                <fullName>CDM-EMEA</fullName>
            </value>
            <value>
                <fullName>CDM-Federal</fullName>
            </value>
            <value>
                <fullName>CDM-NAM</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>